# changelog-hq

./: .env.example  Dockerfile  README.md  docker-compose.yml  github.py  mcp_server.py  models.py  pyproject.toml  renderer.py  requirements.txt  rewriter.py  server.py
templates/: changelog.html  widget.html
