[project]
name = "mcp-server-changelog"
version = "1.0.0"
description = "Auto-generate beautiful changelogs from GitHub PRs using LLM rewriting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
changelog-hq = "server:main"
changelog-hq-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
